fix scroll on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -65,6 +65,9 @@ footer a:hover {
 }
 
 @media only screen and (max-width: 600px) {
+  #root {
+     width: 100%;
+  }
   .container {
     width: 100%;
   }
